# DjangoDDS

./: .env.sample  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
djangoDDS/: apps.py  models.py  serializers.py  urls.py  views.py
djangoDDS/fixtures/: big_data.json
djangoDDS/migrations/: 0001_initial.py  0002_alter_cashflowrecord_created_at.py  0003_cashflowrecord_is_deleted.py
djangoDDS/templates/dds/: base.html  cashflow_create.html  cashflow_delete.html  cashflow_detail.html  cashflow_list.html  category_create.html  category_delete.html  category_detail.html  category_list.html  status_create.html  status_delete.html  status_detail.html  status_list.html  subcategory_create.html  subcategory_delete.html  subcategory_detail.html  subcategory_list.html  type_create.html  type_delete.html  type_detail.html  type_list.html
